<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        app:layout_constraintBottom_toTopOf="@+id/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:weightSum="3">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/percent"
                android:layout_weight="1"
                android:text="@string/percent"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sqrt"
                android:layout_weight="1"
                android:text="@string/sqrt"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <com.google.android.material.button.MaterialButton
                android:layout_weight="1"
                android:text="@string/plus_minus"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn7"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:padding="30dp"
                android:text="@string/_7"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn8"
                android:layout_weight="1"
                android:padding="30dp"
                android:text="@string/_8"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn9"
                android:layout_weight="1"
                android:padding="30dp"
                android:text="@string/_9"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/multiply"
                android:layout_weight="1"
                android:padding="30dp"
                android:text="@string/multiply"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn4"
                android:layout_weight="1"
                android:padding="30dp"
                android:text="@string/_4"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn5"
                android:layout_weight="1"
                android:padding="30dp"
                android:text="@string/_5"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn6"
                android:layout_weight="1"
                android:padding="30dp"
                android:text="@string/_6"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/minus"
                android:layout_weight="1"
                android:padding="30dp"
                android:text="@string/minus"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn1"
                android:layout_weight="1"
                android:padding="30dp"
                android:text="@string/_1"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn2"
                android:layout_weight="1"
                android:padding="30dp"
                android:text="@string/_2"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn3"
                android:layout_weight="1"
                android:padding="30dp"
                android:text="@string/_3"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/plus"
                android:layout_weight="1"
                android:padding="30dp"
                android:text="@string/plus"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/clear"
                android:layout_weight="1"
                android:padding="30dp"
                android:text="@string/C"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn0"
                android:layout_weight="1"
                android:padding="30dp"
                android:text="@string/_0"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/point"
                android:layout_weight="1"
                android:padding="30dp"
                android:text="@string/point"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/divide"
                android:layout_weight="1"
                android:padding="30dp"
                android:text="@string/divide"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </TableRow>

    </TableLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/equals"
        android:textAlignment="viewEnd"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>
